--- a/app/Resources/views/products/add.html.twig
+++ b/app/Resources/views/products/add.html.twig
@@ -1,11 +1,12 @@
 {% extends 'base.html.twig' %}
 
 {% block main %}
-    <div class="container">
-        <div class="col-md-4 col-md-offset-6">
+    <div class="container body-content span=8 offset=2">
+        <div class="well col-md-6 col-md-offset-3">
             {{ form_start(productForm) }}
+            <legend>Add Product</legend>
             {{ form_widget(productForm) }}
-            <button type="submit" class="btn btn-primary" formnovalidate>Send</button>
+            <button type="submit" class="btn btn-primary" formnovalidate>Add</button>
             {{ form_end(productForm, {'render_rest': false, }) }}
         </div>
     </div>
