--- a/app/Resources/views/admin/products/view_all.html.twig
+++ b/app/Resources/views/admin/products/view_all.html.twig
@@ -4,10 +4,10 @@
 
     {% for index,product in products %}
         <div class="container">
-            <div class="row">
+            <div class="row" data-id="{{ product.id }}">
                 <div class="col-md-2">{{ index+1 }}</div>
                 <div class="col-md-4">{{ product.name }}</div>
-                <div class="col-md-2">{{ product.price }}</div>
+                <div class="col-md-2 price">{{ product.price }}</div>
                 <div class="col-md-1"><img src="{{ asset('uploads/products/' ~ product.imageUrl) }}" class="img-responsive"></div>
 
                 <div class="col-md-2"><a href="{{ path("edit_product_form", {'id':product.id}) }}">Edit</a></div>
