--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -14,7 +14,7 @@
             <div class="navbar navbar-default navbar-static-top" role="navigation">
                 <div class="container">
                     <div class="navbar-header">
-                        <a href="{{ path('all_products') }}" class="navbar-brand">WEBSTORE</a>
+                        <a href="{{ path('homepage') }}" class="navbar-brand">WEBSTORE</a>
 
                         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                             <span class="icon-bar"></span>
@@ -42,12 +42,12 @@
                                 </li>
                             {% else %}
                                 <li>
-                                    <a href="{{ path('all_products') }}">
+                                    <a href="{{ path('user_register') }}">
                                         REGISTER
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="{{ path('all_products') }}">
+                                    <a href="{{ path('security_login') }}">
                                         LOGIN
                                     </a>
                                 </li>
