administration panel improvements

--- a/app/Resources/views/admin/products/view_all.html.twig
+++ b/app/Resources/views/admin/products/view_all.html.twig
@@ -1,6 +1,6 @@
-{% extends 'base.html.twig' %}
+{% extends 'admin/admin.html.twig' %}
 
-{% block main %}
+{% block page_content %}
 
     {% for index,product in products %}
         <div class="container">
