--- a/app/Resources/views/admin/products/add.html.twig
+++ b/app/Resources/views/admin/products/add.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{% extends 'admin/admin.html.twig' %}
 
 {% block main %}
     <div class="container body-content span=8 offset=2">
