--- a/app/Resources/views/home/index.html.twig
+++ b/app/Resources/views/home/index.html.twig
@@ -29,14 +29,13 @@
                                 </h4>
                             </a>
                             <p class="lead price">
-                                <span>{{ product.price }}</span> Euro
 
                                 {%  set product_promotion = calc.calculate(product) %}
 
                                 {% if product_promotion != product.price %}
-                                    <del>{{ product.price | number_format(2) }}</del><br />
+                                    <del>{{ product.price | number_format(2) }}</del>
                                 {% endif %}
-                                {{ product_promotion | number_format(2) }}
+                                <span>{{ product_promotion | number_format(2) }}</span> Euro
                             </p>
                             <a class="btn btn-success addtocart-btn" href="#">Add to Cart</a>
                         </div>
@@ -53,7 +52,7 @@
         </div>
     </div>
 
-    <a href="{{ path('all_products') }}">List of products</a>
+    <a href="{{ path('admin_all_products') }}">List of products</a>
     <br>
-    <a href="{{ path('add_product_form') }}">Add a product</a>
+    <a href="{{ path('admin_add_product_form') }}">Add a product</a>
 {% endblock %}
