--- a/app/Resources/views/home/index.html.twig
+++ b/app/Resources/views/home/index.html.twig
@@ -1,6 +1,7 @@
 {% extends 'base.html.twig' %}
 {% block main %}
     <div id="products" class="row list-group">
+        <div class="item col-md-4 col-lg-3" > {{ render(controller('StoreBundle:Store:categoriesMenu')) }} </div>
         {% if products|length %}
             {% for product in products %}
                 <div class="item col-md-4 col-lg-3">
