--- a/app/Resources/views/home/index.html.twig
+++ b/app/Resources/views/home/index.html.twig
@@ -2,6 +2,15 @@
 {% block main %}
     <div id="products" class="row list-group">
         <div class="item col-md-4 col-lg-3" > {{ render(controller('StoreBundle:Store:categoriesMenu')) }} </div>
+
+        <div class="row">
+            <div class="col-md-8">
+                <h3 class="text-center">{{ 'Featured Products' }}</h3>
+                {% for product in featured_products %}
+                    {{ include('includes/showFeatured.html.twig') }}
+                {% endfor %}
+            </div>
+        </div>
         {% if products|length %}
             {% for product in products %}
                 <div class="item col-md-4 col-lg-3">
